# transformer-training-experimentation-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
configs/: base.yaml
configs/experiments/: baseline.yaml  full_dataset.yaml  high_lr.yaml  lr_sweep.yaml  model_comparison.yaml  more_epochs_early_stop.yaml  no_warmup.yaml  sgd_optimizer.yaml
scripts/: run_experiment.py  run_sweep.py
src/pipeline/: config.py  runner.py
src/pipeline/data/: __init__.py  loader.py  preprocessor.py
src/pipeline/evaluation/: __init__.py  evaluator.py
src/pipeline/models/: __init__.py  base.py  hf_model.py
src/pipeline/monitoring/: __init__.py  regression_detector.py
src/pipeline/orchestration/: __init__.py  ray_runner.py
src/pipeline/registry/: __init__.py  model_registry.py
src/pipeline/reporting/: __init__.py  summary.py
src/pipeline/tracking/: __init__.py  mlflow_tracker.py
src/pipeline/training/: __init__.py  callbacks.py  trainer.py  utils.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_config.py  test_data.py  test_evaluator.py  test_mlflow_tracker.py  test_model.py  test_ray_runner.py  test_registry.py  test_regression_detector.py  test_reporting.py  test_run_sweep.py  test_runner.py  test_trainer.py
